bug fixes when gettings os type and calling commands